// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sidebar /> matches render snapshot - login form, with no validation errors 1`] = `
<div
  id="sidebarPage"
>
  <a
    href="/"
    onClick={[Function]}
  >
    Home
  </a>
  <div
    className="container-fluid"
  >
    <div
      className="row"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="jumbotron"
        >
          <div
            className="pitch"
          >
            A platform to find, share, and discuss healthy places to shop and eat.
          </div>
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-sm-4 col-sm-offset-4 col-xs-8 col-xs-offset-2"
      >
        <div
          className="panel panel-default"
          id={undefined}
        >
          <div
            className="panel-heading"
          >
            Get Started
          </div>
          <div
            className="panel-body"
          >
            <form
              onSubmit={[Function]}
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                  htmlFor="usernameEmail"
                >
                  Username / Email
                </label>
                <input
                  autoFocus={true}
                  className="form-control"
                  id="usernameEmail"
                  name="usernameEmail"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onDragStart={[Function]}
                  onDrop={[Function]}
                  onFocus={[Function]}
                  type="text"
                  value=""
                />
              </div>
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                  htmlFor="loginPassword"
                >
                  Password
                </label>
                <input
                  autoFocus={undefined}
                  className="form-control"
                  id="loginPassword"
                  name="loginPassword"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onDragStart={[Function]}
                  onDrop={[Function]}
                  onFocus={[Function]}
                  type="password"
                  value=""
                />
              </div>
              <button
                className="btn btn-default"
                disabled={true}
                id="loginSubmit"
                type="submit"
              >
                Sign In
              </button>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Sidebar /> matches render snapshot - no action form 1`] = `
<div
  id="sidebarPage"
>
  <a
    href="/"
    onClick={[Function]}
  >
    Home
  </a>
  <div
    className="container-fluid"
  >
    <div
      className="row"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="jumbotron"
        >
          <div
            className="pitch"
          >
            A platform to find, share, and discuss healthy places to shop and eat.
          </div>
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-sm-4 col-sm-offset-4 col-xs-8 col-xs-offset-2"
      >
        <div
          className="panel panel-default"
          id={undefined}
        >
          <div
            className="panel-heading"
          >
            Get Started
          </div>
          <div
            className="panel-body"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Sidebar /> matches render snapshot - signup form, with no validation errors 1`] = `
<div
  id="sidebarPage"
>
  <a
    href="/"
    onClick={[Function]}
  >
    Home
  </a>
  <div
    className="container-fluid"
  >
    <div
      className="row"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="jumbotron"
        >
          <div
            className="pitch"
          >
            A platform to find, share, and discuss healthy places to shop and eat.
          </div>
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-sm-4 col-sm-offset-4 col-xs-8 col-xs-offset-2"
      >
        <div
          className="panel panel-default"
          id={undefined}
        >
          <div
            className="panel-heading"
          >
            Get Started
          </div>
          <div
            className="panel-body"
          >
            <div
              className="pt2 pl4 pr4 pb4"
            >
              <form
                className="measure center"
                onSubmit={[Function]}
              >
                <fieldset
                  className="ba b--transparent ph0 mh0"
                  id="sign_up"
                >
                  <legend
                    className="f4 fw6 ph0 mh0"
                  >
                    Create Account
                  </legend>
                  <div
                    className="mt3"
                  >
                    <div>
                      <label
                        className="db fw6 lh-copy f6"
                        htmlFor="username"
                      >
                        Username
                      </label>
                      <input
                        autoFocus={true}
                        className="pa2 input-reset ba bg-transparent hover-bg-black hover-white w-100"
                        id="username"
                        name="username"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onDragStart={[Function]}
                        onDrop={[Function]}
                        onFocus={[Function]}
                        placeholder="Username"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    className="mt3"
                  >
                    <div>
                      <label
                        className="db fw6 lh-copy f6"
                        htmlFor="email"
                      >
                        Email
                      </label>
                      <input
                        autoFocus={undefined}
                        className="pa2 input-reset ba bg-transparent hover-bg-black hover-white w-100"
                        id="email"
                        name="email"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onDragStart={[Function]}
                        onDrop={[Function]}
                        onFocus={[Function]}
                        placeholder="Email"
                        type="email"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    className="mv3"
                  >
                    <div>
                      <label
                        className="db fw6 lh-copy f6"
                        htmlFor="password"
                      >
                        Password
                      </label>
                      <input
                        autoFocus={undefined}
                        className="pa2 input-reset ba bg-transparent hover-bg-black hover-white w-100"
                        id="password"
                        name="password"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onDragStart={[Function]}
                        onDrop={[Function]}
                        onFocus={[Function]}
                        placeholder="Password"
                        type="password"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    className="mv3"
                  >
                    <div>
                      <label
                        className="db fw6 lh-copy f6"
                        htmlFor="confirmPassword"
                      >
                        Confirm Password
                      </label>
                      <input
                        autoFocus={undefined}
                        className="pa2 input-reset ba bg-transparent hover-bg-black hover-white w-100"
                        id="confirmPassword"
                        name="confirmPassword"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onDragStart={[Function]}
                        onDrop={[Function]}
                        onFocus={[Function]}
                        placeholder="Confirm Password"
                        type="password"
                        value=""
                      />
                    </div>
                  </div>
                </fieldset>
                <div>
                  <input
                    className="b ph3 pv2 input-reset ba b--black bg-transparent grow pointer f6 dib"
                    disabled={true}
                    type="submit"
                    value="Create Account"
                  />
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
